# blockgam

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.txt
src/: CMakeLists.txt  g_board.c  g_board.h  g_main.c  g_main.h  g_piece.c  g_piece.h  g_ticktimer.c  g_ticktimer.h  m_menu.c  m_menu.h  main.c  s_alloc.c  s_alloc.h  v_video.c  v_video.h
